Основната функционалност (без точка 6) е добавена

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    
+    <div id="div1" class="asd"></div>
+    <div id="div2" class="asd"></div>
+
+    <div id="div3">
+        <ul>
+            <li id="list1" class="ll">Coffee</li>
+            <li id="list2" class="ll">Tea</li>
+        </ul>
+        <p>Some text here</p>
+    </div>
+
+    <script src="myDomLib.js"></script>
 </body>
 </html>
