Основната функционалност е добавена

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dom Calendar</title>
+    <title>DOM Calendar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -17,6 +17,8 @@
         </ul>
         <p>Some text here</p>
     </div>
+
+    <button id="btnn">click me</button>
 
     <script src="myDomLib.js"></script>
 </body>
