Добавена UI библиотека с контрола календар

--- a/index.html
+++ b/index.html
@@ -5,21 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>DOM Calendar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div id="div1" class="asd"></div>
-    <div id="div2" class="asd"></div>
+    <div id="myCalendar"></div>
 
-    <div id="div3">
-        <ul>
-            <li id="list1" class="ll">Coffee</li>
-            <li id="list2" class="ll">Tea</li>
-        </ul>
-        <p>Some text here</p>
-    </div>
-
-    <button id="btnn">click me</button>
+    <div id="a"></div>
 
     <script src="myDomLib.js"></script>
+    <script src="mydomLibUI.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
