Когато се приложи към input - календара се превръща в date picker

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div id="myCalendar"></div>
 
+    <!-- <input type="text" id="myCalendar"> -->
+
     <script src="myDomLib.js"></script>
     <script src="mydomLibUI.js"></script>
     <script src="script.js"></script>
